add startDate and endDate to /document/header
